--- a/assets/fs/irata-style.css
+++ b/assets/fs/irata-style.css
@@ -368,6 +368,7 @@ input[type="submit"]:hover, button:hover {
 .clock-level {
     font-size: 3vi;
     color: yellow;
+    text-align: center;
 }
 
 .clock-time {
