--- a/assets/templates/view-tournament.html.tmpl
+++ b/assets/templates/view-tournament.html.tmpl
@@ -20,7 +20,7 @@
               <td class="clock-title">
                 {{ .Tournament.EventName }}
               </td>
-              <td class="clock-level" id="level"> LOADING... </td>
+              <td class="clock-level nowrap" id="level"> LOADING... </td>
               <td> 
                 <div class="clock-current-players" id="current-players">{{ .Tournament.State.CurrentPlayers }}</div>
                 <div style="text-align: center;" class="clock-current-players-label"> PLAYERS </div>
@@ -33,7 +33,7 @@
               </td>
             </tr>
             <tr>
-              <td colspan="3"  class="clock-blinds" id="blinds"> LOADING...</td>
+              <td colspan="3"  class="clock-blinds nowrap" id="blinds"> LOADING...</td>
             </tr>
             <tr>
               <td colspan="3">
