Don't wrap clock-blinds field.
This probably needs more thought.

--- a/assets/templates/view-tournament.html.tmpl
+++ b/assets/templates/view-tournament.html.tmpl
@@ -33,7 +33,7 @@
               </td>
             </tr>
             <tr>
-              <td colspan="3"  class="clock-blinds nowrap" id="blinds"> LOADING...</td>
+              <td colspan="3"  class="clock-blinds" id="blinds"> LOADING...</td>
             </tr>
             <tr>
               <td colspan="3">
