--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -19,6 +19,7 @@
                 <span style="opacity: 0.7;">Manage:</span> <a href="/manage/site">Site</a> 
                 <a href="/manage/footer-set">Footer Plugs</a> 
                 <a href="/manage/structure">Structures</a>
+                <a href="/manage/users">Users</a>
             </div>
             <div style="margin-top: 0.5em; border-top: 1px solid #333; padding-top: 0.5em;">
                 <a href="/logout">Logout</a>
