--- a/assets/templates/edit-footer-plugs.html.tmpl
+++ b/assets/templates/edit-footer-plugs.html.tmpl
@@ -8,6 +8,7 @@
         </title>
     </head>
   <body>
+    {{ template "user-bar" . }}
     <style>
       @font-face {
           font-family: arcade;
