--- a/assets/templates/edit-structure.html.tmpl
+++ b/assets/templates/edit-structure.html.tmpl
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/fs/{{ .Theme }}-style.css">
 </head>
 <body>
+{{ template "user-bar" . }}
 
 <script>
   function getLevelNumber(banner) {
