--- a/assets/templates/manage-structures.html.tmpl
+++ b/assets/templates/manage-structures.html.tmpl
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/fs/{{ .Theme }}-style.css">
 </head>
 <body>
+    {{ template "user-bar" . }}
     <div class="container">
         <div class="admin-bar">
             <a href="/">&lt; Back to Home</a>
