--- a/assets/templates/edit-footer-set.html.tmpl
+++ b/assets/templates/edit-footer-set.html.tmpl
@@ -16,6 +16,7 @@
     </script>
 </head>
 <body>
+    {{ template "user-bar" . }}
     <div class="container">
         <div class="admin-bar">
             <a href="/manage/footer-set/">&lt; Back to Footer Sets</a>
