--- a/assets/templates/edit-tournament.html.tmpl
+++ b/assets/templates/edit-tournament.html.tmpl
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    {{ template "user-bar" . }}
     <div class="container">
         <div class="admin-bar">
             <a href="/">&lt; Back to Home</a>
