--- a/assets/templates/login.html.tmpl
+++ b/assets/templates/login.html.tmpl
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/fs/irata-style.css">
 </head>
 <body>
+    {{ template "user-bar" . }}
     <div class="login-box">
         <h2>Login</h2>
         {{ if .Flash }}
