Fix default sound on form. Fix permissions issues from op/admin split.

--- a/assets/templates/edit-tournament.html.tmpl
+++ b/assets/templates/edit-tournament.html.tmpl
@@ -613,7 +613,7 @@
             </script>
 
             <div class="actions">
-                {{ if not .IsAdmin }}
+                {{ if not .IsOperator }}
                 <p>You can look but you can't touch</p>
                 {{ else if .IsNew }}
                 <button type="submit">Create Tournament</button>
