--- a/assets/templates/slash.html.tmpl
+++ b/assets/templates/slash.html.tmpl
@@ -67,7 +67,7 @@
             </tbody>
         </table>
 
-        {{ if not .IsAdmin }}
+        {{ if not .Nick }}
         <p>
             <a href="/login">LOGIN</a> to manage tournaments and other data.
         </p>
