Allow duplicating footer plug sets.

--- a/assets/templates/manage-footer-sets.html.tmpl
+++ b/assets/templates/manage-footer-sets.html.tmpl
@@ -29,6 +29,7 @@
                     <td>{{ .Version }}</td>
                     <td>
                         <a href="/manage/footer-set/{{ .FooterPlugsID }}/edit">Edit</a>
+                        <a href="/create/footer-set?template={{ .FooterPlugsID }}">Copy</a>
                         <a href="#" style="color:#f88;" onclick="showDeleteModal({{-  .FooterPlugsID -}})">Delete</a>
                     </td>
                 </tr>
